--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         empezarForm.addEventListener('submit', (evento) => {
             evento.preventDefault()
             let limite = empezarForm.elements.limite.value;
-            window.location.assign('/juego.html?limite=' + limite)
+            window.location.assign('./juego.html?limite=' + limite)
         })
     </script>
     <script src="./scripts/index.js"></script>
